# catalog/internal/server/openapi/v1alpha1/api_serving_runtime.go
@@ -1,39 +1,0 @@
-// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
-
-/*
- * Catalog REST API
- *
- * REST API for Kubeflow Hub Catalog
- *
- * API version: v1alpha1
- */
-
-package v1alpha1
-
-import (
-	"context"
-	"net/http"
-
-	model "github.com/kubeflow/hub/catalog/pkg/openapi"
-)
-
-// ServingRuntimeCatalogServiceAPIRouter defines the required methods for binding the api requests to a responses for the ServingRuntimeCatalogServiceAPI
-// The ServingRuntimeCatalogServiceAPIRouter implementation should parse necessary information from the http request,
-// pass the data to a ServingRuntimeCatalogServiceAPIServicer to perform the required actions, then write the service results to the http response.
-type ServingRuntimeCatalogServiceAPIRouter interface {
-	FindServingRuntimes(http.ResponseWriter, *http.Request)
-	FindServingRuntimesFilterOptions(http.ResponseWriter, *http.Request)
-	GetServingRuntime(http.ResponseWriter, *http.Request)
-	GetServingRuntimeVersions(http.ResponseWriter, *http.Request)
-}
-
-// ServingRuntimeCatalogServiceAPIServicer defines the api actions for the ServingRuntimeCatalogServiceAPI service
-// This interface intended to stay up to date with the openapi yaml used to generate it,
-// while the service implementation can be ignored with the .openapi-generator-ignore file
-// and updated with the logic required for the API.
-type ServingRuntimeCatalogServiceAPIServicer interface {
-	FindServingRuntimes(context.Context, string, string, []string, []string, string, string, model.OrderByField, model.SortOrder, string) (ImplResponse, error)
-	FindServingRuntimesFilterOptions(context.Context) (ImplResponse, error)
-	GetServingRuntime(context.Context, string) (ImplResponse, error)
-	GetServingRuntimeVersions(context.Context, string, string, string, model.OrderByField, model.SortOrder, string) (ImplResponse, error)
-}
