# catalog/internal/server/openapi/v1alpha1/api_serving_runtime_catalog_service.go
@@ -1,270 +1,0 @@
-// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
-
-/*
- * Catalog REST API
- *
- * REST API for Kubeflow Hub Catalog
- *
- * API version: v1alpha1
- */
-
-package v1alpha1
-
-import (
-	"net/http"
-	"strings"
-
-	"github.com/go-chi/chi/v5"
-
-	model "github.com/kubeflow/hub/catalog/pkg/openapi"
-)
-
-// ServingRuntimeCatalogServiceAPIController binds http requests to an api service and writes the service results to the http response
-type ServingRuntimeCatalogServiceAPIController struct {
-	service      ServingRuntimeCatalogServiceAPIServicer
-	errorHandler ErrorHandler
-}
-
-// ServingRuntimeCatalogServiceAPIOption for how the controller is set up.
-type ServingRuntimeCatalogServiceAPIOption func(*ServingRuntimeCatalogServiceAPIController)
-
-// WithServingRuntimeCatalogServiceAPIErrorHandler inject ErrorHandler into controller
-func WithServingRuntimeCatalogServiceAPIErrorHandler(h ErrorHandler) ServingRuntimeCatalogServiceAPIOption {
-	return func(c *ServingRuntimeCatalogServiceAPIController) {
-		c.errorHandler = h
-	}
-}
-
-// NewServingRuntimeCatalogServiceAPIController creates a default api controller
-func NewServingRuntimeCatalogServiceAPIController(s ServingRuntimeCatalogServiceAPIServicer, opts ...ServingRuntimeCatalogServiceAPIOption) *ServingRuntimeCatalogServiceAPIController {
-	controller := &ServingRuntimeCatalogServiceAPIController{
-		service:      s,
-		errorHandler: DefaultErrorHandler,
-	}
-
-	for _, opt := range opts {
-		opt(controller)
-	}
-
-	return controller
-}
-
-// Routes returns all the api routes for the ServingRuntimeCatalogServiceAPIController
-func (c *ServingRuntimeCatalogServiceAPIController) Routes() Routes {
-	return Routes{
-		"FindServingRuntimes": Route{
-			"FindServingRuntimes",
-			strings.ToUpper("Get"),
-			"/api/serving_runtime_catalog/v1alpha1/serving_runtimes",
-			c.FindServingRuntimes,
-		},
-		"FindServingRuntimesFilterOptions": Route{
-			"FindServingRuntimesFilterOptions",
-			strings.ToUpper("Get"),
-			"/api/serving_runtime_catalog/v1alpha1/serving_runtimes/filter_options",
-			c.FindServingRuntimesFilterOptions,
-		},
-		"GetServingRuntime": Route{
-			"GetServingRuntime",
-			strings.ToUpper("Get"),
-			"/api/serving_runtime_catalog/v1alpha1/serving_runtimes/{id}",
-			c.GetServingRuntime,
-		},
-		"GetServingRuntimeVersions": Route{
-			"GetServingRuntimeVersions",
-			strings.ToUpper("Get"),
-			"/api/serving_runtime_catalog/v1alpha1/serving_runtimes/{id}/versions",
-			c.GetServingRuntimeVersions,
-		},
-	}
-}
-
-// OrderedRoutes returns all the api routes in a deterministic order for the ServingRuntimeCatalogServiceAPIController
-func (c *ServingRuntimeCatalogServiceAPIController) OrderedRoutes() []Route {
-	return []Route{
-		Route{
-			"FindServingRuntimes",
-			strings.ToUpper("Get"),
-			"/api/serving_runtime_catalog/v1alpha1/serving_runtimes",
-			c.FindServingRuntimes,
-		},
-		Route{
-			"FindServingRuntimesFilterOptions",
-			strings.ToUpper("Get"),
-			"/api/serving_runtime_catalog/v1alpha1/serving_runtimes/filter_options",
-			c.FindServingRuntimesFilterOptions,
-		},
-		Route{
-			"GetServingRuntime",
-			strings.ToUpper("Get"),
-			"/api/serving_runtime_catalog/v1alpha1/serving_runtimes/{id}",
-			c.GetServingRuntime,
-		},
-		Route{
-			"GetServingRuntimeVersions",
-			strings.ToUpper("Get"),
-			"/api/serving_runtime_catalog/v1alpha1/serving_runtimes/{id}/versions",
-			c.GetServingRuntimeVersions,
-		},
-	}
-}
-
-// FindServingRuntimes - List serving_runtimes.
-func (c *ServingRuntimeCatalogServiceAPIController) FindServingRuntimes(w http.ResponseWriter, r *http.Request) {
-	query, err := parseQuery(r.URL.RawQuery)
-	if err != nil {
-		c.errorHandler(w, r, &ParsingError{Err: err}, nil)
-		return
-	}
-	var nameParam string
-	if query.Has("name") {
-		param := query.Get("name")
-
-		nameParam = param
-	} else {
-	}
-	var qParam string
-	if query.Has("q") {
-		param := query.Get("q")
-
-		qParam = param
-	} else {
-	}
-	var sourceParam []string
-	if query.Has("source") {
-		sourceParam = strings.Split(query.Get("source"), ",")
-	}
-	var sourceLabelParam []string
-	if query.Has("sourceLabel") {
-		sourceLabelParam = strings.Split(query.Get("sourceLabel"), ",")
-	}
-	var filterQueryParam string
-	if query.Has("filterQuery") {
-		param := query.Get("filterQuery")
-
-		filterQueryParam = param
-	} else {
-	}
-	var pageSizeParam string
-	if query.Has("pageSize") {
-		param := query.Get("pageSize")
-
-		pageSizeParam = param
-	} else {
-	}
-	var orderByParam model.OrderByField
-	if query.Has("orderBy") {
-		param := model.OrderByField(query.Get("orderBy"))
-
-		orderByParam = param
-	} else {
-	}
-	var sortOrderParam model.SortOrder
-	if query.Has("sortOrder") {
-		param := model.SortOrder(query.Get("sortOrder"))
-
-		sortOrderParam = param
-	} else {
-	}
-	var nextPageTokenParam string
-	if query.Has("nextPageToken") {
-		param := query.Get("nextPageToken")
-
-		nextPageTokenParam = param
-	} else {
-	}
-	result, err := c.service.FindServingRuntimes(r.Context(), nameParam, qParam, sourceParam, sourceLabelParam, filterQueryParam, pageSizeParam, orderByParam, sortOrderParam, nextPageTokenParam)
-	// If an error occurred, encode the error with the status code
-	if err != nil {
-		c.errorHandler(w, r, err, &result)
-		return
-	}
-	// If no error, encode the body and the result code
-	_ = EncodeJSONResponse(result.Body, &result.Code, w)
-}
-
-// FindServingRuntimesFilterOptions - Lists fields and values that can be used in `filterQuery` on the list serving_runtimes endpoint.
-func (c *ServingRuntimeCatalogServiceAPIController) FindServingRuntimesFilterOptions(w http.ResponseWriter, r *http.Request) {
-	result, err := c.service.FindServingRuntimesFilterOptions(r.Context())
-	// If an error occurred, encode the error with the status code
-	if err != nil {
-		c.errorHandler(w, r, err, &result)
-		return
-	}
-	// If no error, encode the body and the result code
-	_ = EncodeJSONResponse(result.Body, &result.Code, w)
-}
-
-// GetServingRuntime - Get a serving_runtime by ID.
-func (c *ServingRuntimeCatalogServiceAPIController) GetServingRuntime(w http.ResponseWriter, r *http.Request) {
-	idParam := chi.URLParam(r, "id")
-	if idParam == "" {
-		c.errorHandler(w, r, &RequiredError{"id"}, nil)
-		return
-	}
-	result, err := c.service.GetServingRuntime(r.Context(), idParam)
-	// If an error occurred, encode the error with the status code
-	if err != nil {
-		c.errorHandler(w, r, err, &result)
-		return
-	}
-	// If no error, encode the body and the result code
-	_ = EncodeJSONResponse(result.Body, &result.Code, w)
-}
-
-// GetServingRuntimeVersions - List versions of a `ServingRuntime`.
-func (c *ServingRuntimeCatalogServiceAPIController) GetServingRuntimeVersions(w http.ResponseWriter, r *http.Request) {
-	query, err := parseQuery(r.URL.RawQuery)
-	if err != nil {
-		c.errorHandler(w, r, &ParsingError{Err: err}, nil)
-		return
-	}
-	idParam := chi.URLParam(r, "id")
-	if idParam == "" {
-		c.errorHandler(w, r, &RequiredError{"id"}, nil)
-		return
-	}
-	var filterQueryParam string
-	if query.Has("filterQuery") {
-		param := query.Get("filterQuery")
-
-		filterQueryParam = param
-	} else {
-	}
-	var pageSizeParam string
-	if query.Has("pageSize") {
-		param := query.Get("pageSize")
-
-		pageSizeParam = param
-	} else {
-	}
-	var orderByParam model.OrderByField
-	if query.Has("orderBy") {
-		param := model.OrderByField(query.Get("orderBy"))
-
-		orderByParam = param
-	} else {
-	}
-	var sortOrderParam model.SortOrder
-	if query.Has("sortOrder") {
-		param := model.SortOrder(query.Get("sortOrder"))
-
-		sortOrderParam = param
-	} else {
-	}
-	var nextPageTokenParam string
-	if query.Has("nextPageToken") {
-		param := query.Get("nextPageToken")
-
-		nextPageTokenParam = param
-	} else {
-	}
-	result, err := c.service.GetServingRuntimeVersions(r.Context(), idParam, filterQueryParam, pageSizeParam, orderByParam, sortOrderParam, nextPageTokenParam)
-	// If an error occurred, encode the error with the status code
-	if err != nil {
-		c.errorHandler(w, r, err, &result)
-		return
-	}
-	// If no error, encode the body and the result code
-	_ = EncodeJSONResponse(result.Body, &result.Code, w)
-}
